[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Interface/pasue.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/joystick.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/botao-hover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/botao-export.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Joystick.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Interface/joystick_apertado/joystick_up_pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Interface/joystick_apertado/joystick_down_pressed.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Interface/joystick_apertado/joystick_left_pressed.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Interface/joystick_apertado/joystick_mid_pressed.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Interface/joystick_apertado/joystick_right_pressed.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
margin_left = 171.0
margin_top = 311.0
margin_right = 211.0
margin_bottom = 351.0
mouse_filter = 1

[node name="Joystick" type="Sprite" parent="GUI"]
position = Vector2( -1024, 96 )
scale = Vector2( 0.785, 0.785 )
texture = ExtResource( 4 )
offset = Vector2( 1404.62, 156.923 )
script = ExtResource( 7 )

[node name="JoystickDownPressed" type="Sprite" parent="GUI/Joystick"]
visible = false
texture = ExtResource( 9 )
offset = Vector2( 1404.62, 156.923 )

[node name="JoystickUpPressed" type="Sprite" parent="GUI/Joystick"]
visible = false
texture = ExtResource( 8 )
offset = Vector2( 1404.62, 156.923 )

[node name="JoystickRightPressed" type="Sprite" parent="GUI/Joystick"]
visible = false
texture = ExtResource( 12 )
offset = Vector2( 1404.62, 156.923 )

[node name="JoystickMidPressed" type="Sprite" parent="GUI/Joystick"]
visible = false
texture = ExtResource( 11 )
offset = Vector2( 1404.62, 156.923 )

[node name="JoystickLeftPressed" type="Sprite" parent="GUI/Joystick"]
visible = false
texture = ExtResource( 10 )
offset = Vector2( 1404.62, 156.923 )

[node name="Pause" type="Sprite" parent="GUI"]
position = Vector2( -140, -280 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="PauseButton" type="TextureButton" parent="GUI/Pause"]
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0

[node name="PauseScreen" type="Node2D" parent="."]
visible = false
position = Vector2( 180, 320 )

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.537255 )

[node name="StartButton" type="TextureButton" parent="PauseScreen"]
margin_left = -136.0
margin_top = -192.0
margin_right = 136.0
margin_bottom = -104.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="PauseScreen/StartButton"]
margin_left = 80.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 63.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = " RESUMIR"

[node name="QuitButton" type="TextureButton" parent="PauseScreen"]
margin_left = -136.0
margin_top = 120.0
margin_right = 136.0
margin_bottom = 208.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="RichTextLabel3" type="RichTextLabel" parent="PauseScreen/QuitButton"]
margin_left = 98.0
margin_top = 25.0
margin_right = 177.0
margin_bottom = 65.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " SAIR"

[connection signal="pressed" from="GUI/Pause/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseScreen/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PauseScreen/QuitButton" to="." method="_on_QuitButton_pressed"]
